--- a/landing/package.json
+++ b/landing/package.json
@@ -11,9 +11,14 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/adapter-vercel": "^5.6.3",
 		"@sveltejs/kit": "^2.16.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"svelte": "^5.0.0",
 		"vite": "^6.0.0"
+	},
+	"dependencies": {
+		"nodemailer": "^6.10.0",
+		"swiper": "^11.2.5"
 	}
 }
