--- a/landing/package.json
+++ b/landing/package.json
@@ -19,6 +19,8 @@
 	},
 	"dependencies": {
 		"nodemailer": "^6.10.0",
+		"page-flip": "^2.0.7",
+		"pdfjs-dist": "^4.10.38",
 		"swiper": "^11.2.5"
 	}
 }
